--- a/src/components/maskComponents/mask/mask.module.css
+++ b/src/components/maskComponents/mask/mask.module.css
@@ -72,8 +72,8 @@
 }
 
 .componentsPage_bottom_main_productTitle,
-.componentsPage_bottom_header_title {
-  width: 17.5%;
+.componentsPage_bottom_main_productParentId {
+  width: 21%;
 }
 
 .componentsPage_bottom_main_productImageBox {
@@ -84,6 +84,10 @@
   width: 50px;
   height: 50px;
   border-radius: 50%;
+}
+
+.componentsPage_bottom_header_title {
+  width: 20%;
 }
 
 .componentsPage_bottom_main_iconBox {
@@ -98,75 +102,6 @@
 
 .componentsPage_bottom_main_iconBox_icon:hover {
   color: blue;
-}
-
-.backdrop {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.5);
-  z-index: 9;
-}
-
-.ParametrsModal {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-  width: 50%;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  padding: 20px;
-  background: white;
-  border-radius: 4px;
-}
-
-.ParametrsModal_header {
-  display: flex;
-  justify-content: space-between;
-  cursor: pointer;
-  font-size: 20px;
-}
-
-.ParametrsModal_header_icon:hover {
-  color: red;
-}
-
-.ParametrsModal_card {
-  display: flex;
-  justify-content: space-between;
-  gap: 20px;
-}
-
-.ParametrsModal_card_input {
-  width: 100%;
-  height: 30px;
-  padding: 0 5px;
-  border: 1px solid gray;
-}
-
-.ParametrsModal_card_text {
-  width: 15%;
-}
-
-.ParametrsModal_card_form {
-  display: flex;
-  margin-bottom: 60px;
-}
-
-.ParametrsModal_card_ftext {
-  width: 18.3%;
-}
-
-.ParametrsModal_btn {
-  padding: 5px 0;
-  color: white;
-  font-weight: bold;
-  font-size: 20px;
-  background: red;
 }
 
 @media screen and (max-width: 968px) {
@@ -204,4 +139,4 @@
   .ComponentsUpdate_btn {
     margin-left: 50%;
   }
-}/*# sourceMappingURL=parametrs.module.css.map */
+}/*# sourceMappingURL=mask.module.css.map */
