--- a/src/components/maskComponents/mask/mask.module.scss
+++ b/src/components/maskComponents/mask/mask.module.scss
@@ -70,8 +70,9 @@
     display: none;
 }
 
-.componentsPage_bottom_main_productTitle{
-    width: 150%;
+.componentsPage_bottom_main_productTitle,
+.componentsPage_bottom_main_productParentId{
+    width: 21%;
 }
 
 .componentsPage_bottom_main_productImageBox{
