--- a/src/components/parametrComponents/parametrs/parametrs.module.css
+++ b/src/components/parametrComponents/parametrs/parametrs.module.css
@@ -71,8 +71,9 @@
   display: none;
 }
 
-.componentsPage_bottom_main_productTitle {
-  width: 150%;
+.componentsPage_bottom_main_productTitle,
+.componentsPage_bottom_header_title {
+  width: 17.5%;
 }
 
 .componentsPage_bottom_main_productImageBox {
@@ -83,10 +84,6 @@
   width: 50px;
   height: 50px;
   border-radius: 50%;
-}
-
-.componentsPage_bottom_header_title {
-  width: 20%;
 }
 
 .componentsPage_bottom_main_iconBox {
@@ -101,6 +98,75 @@
 
 .componentsPage_bottom_main_iconBox_icon:hover {
   color: blue;
+}
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 9;
+}
+
+.ParametrsModal {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  width: 50%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 20px;
+  background: white;
+  border-radius: 4px;
+}
+
+.ParametrsModal_header {
+  display: flex;
+  justify-content: space-between;
+  cursor: pointer;
+  font-size: 20px;
+}
+
+.ParametrsModal_header_icon:hover {
+  color: red;
+}
+
+.ParametrsModal_card {
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
+}
+
+.ParametrsModal_card_input {
+  width: 100%;
+  height: 30px;
+  padding: 0 5px;
+  border: 1px solid gray;
+}
+
+.ParametrsModal_card_text {
+  width: 15%;
+}
+
+.ParametrsModal_card_form {
+  display: flex;
+  margin-bottom: 60px;
+}
+
+.ParametrsModal_card_ftext {
+  width: 18.3%;
+}
+
+.ParametrsModal_btn {
+  padding: 5px 0;
+  color: white;
+  font-weight: bold;
+  font-size: 20px;
+  background: red;
 }
 
 @media screen and (max-width: 968px) {
@@ -129,7 +195,7 @@
 @media screen and (max-width: 768px) {
   .componentsPage_bottom_header,
   .componentsPage_bottom_main {
-    width: 768px;
+    width: 1100px;
     font-size: 14px;
   }
   .componentsUpdate {
@@ -138,4 +204,4 @@
   .ComponentsUpdate_btn {
     margin-left: 50%;
   }
-}/*# sourceMappingURL=ParametrType.module.css.map */
+}/*# sourceMappingURL=parametrs.module.css.map */
