--- a/src/components/parametrTypeComponents/parametrtype/ParametrType.module.scss
+++ b/src/components/parametrTypeComponents/parametrtype/ParametrType.module.scss
@@ -24,7 +24,7 @@
 
 .componentsPage_header_input{
     width: 70%;
-    padding: 6px 20px;
+    padding: 6px 20px; 
 }
 
 .componentsPage_header_btn{
@@ -70,9 +70,20 @@
     display: none;
 }
 
-.componentsPage_bottom_main_productTitle,
-.componentsPage_bottom_header_title{
-    width: 17.5%;
+.componentsPage_bottom_main_productTitle_typeTitle,
+.componentsPage_bottom_main_productTitle_typeID,
+.componentsPage_bottom_main_productTitle_typeStatus,
+.componentsPage_bottom_main_productTitle_typeWeight{
+    width: 100%;
+}
+
+.componentsPage_bottom_main_productTitle_typeTitle,
+.componentsPage_bottom_main_productTitle_typeStatus{
+    margin-left: 220px;
+}
+
+.componentsPage_bottom_main_productTitle_typeWeight{
+    margin-left: 220px;
 }
 
 .componentsPage_bottom_main_productImageBox{
@@ -82,6 +93,10 @@
     width:50px;
     height: 50px;
     border-radius: 50%;
+}
+
+.componentsPage_bottom_header_title{
+    width: 20%;
 }
 
 .componentsPage_bottom_main_iconBox{
@@ -98,73 +113,7 @@
     color: blue;
 }
 
-.backdrop {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.5);
-    z-index: 9;
-  }
-  
 
-.ParametrsModal{
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    width: 50%;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    padding: 20px;
-background: white;    border-radius: 4px;
-}
-
-.ParametrsModal_header{
-    display: flex;
-    justify-content: space-between;
-    cursor: pointer;
-    font-size: 20px;
-}
-
-.ParametrsModal_header_icon:hover{
-    color: red;
-}
-
-.ParametrsModal_card{
-    display: flex;
-    justify-content: space-between;
-    gap: 20px;
-}
-
-.ParametrsModal_card_input{
-    width: 100%;
-    height: 30px;
-    padding:0 5px;
-    border: 1px solid gray;
-}
-
-.ParametrsModal_card_text{
-    width: 15%;
-}
-
-.ParametrsModal_card_form{
-    display: flex;
-    margin-bottom: 60px;
-}
-.ParametrsModal_card_ftext{
-    width: 18.3%;
-}
-
-.ParametrsModal_btn{
-    padding: 5px 0;
-    color: white;
-    font-weight: bold;
-    font-size: 20px;
-    background: red;
-}
 
 @media screen and (max-width: 968px) {
     .componentsPage_bottom {
