have problem detailId

--- a/src/components/productCompoonent/productCompoonent.module.css
+++ b/src/components/productCompoonent/productCompoonent.module.css
@@ -87,8 +87,20 @@
 }
 
 .componentsPage_bottom_main_btn {
-  padding: 10px 60px;
+  padding: 10px 74px;
   background: red;
+  color: white;
+  border: none;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  position: absolute;
+  right: 42%;
+}
+
+.detailPage_main_head_right_btn_ok {
+  padding: 10px 60px;
+  background: green;
   color: white;
   border: none;
   display: flex;
@@ -144,7 +156,8 @@
   }
 }
 @media screen and (min-width: 2000px) {
-  .componentsPage_bottom_main_btn {
+  .componentsPage_bottom_main_btn,
+  .componentsPage_bottom_main_btn_ok {
     right: 44%;
   }
 }/*# sourceMappingURL=productCompoonent.module.css.map */
