Sent a login page with token auth

--- a/src/page/login/login.css
+++ b/src/page/login/login.css
@@ -6,7 +6,7 @@
 }
 
 .formControl {
-    margin: 20px;
+    margin: 100px 0px;
     background-color: #ffffff;
     box-shadow: 0 15px 25px rgba(0, 0, 0, 0.6);
     width: 400px;
