--- a/src/components/categoryComonents/componentsAdd/componentsAdd.module.css
+++ b/src/components/categoryComonents/componentsAdd/componentsAdd.module.css
@@ -17,7 +17,7 @@
   margin-bottom: 20px;
 }
 
-.componentAdd_header_input {
+.componentAdd_header_input ,textarea{
   width: 60%;
   border-radius: 4px;
   padding: 10px;
@@ -26,7 +26,7 @@
 .componentAdd_main {
   margin: 40px 0;
   padding: 20px 0;
-  display: flex;
+  display: flex;  
   justify-content: space-between;
   height: 300px;
 }
@@ -74,7 +74,7 @@
     flex-direction: column;
     gap: 20px;
   }
-  .componentAdd_header_input {
+  .componentAdd_header_input, textarea{
     width: 100%;
   }
   .componentAdd_main {
@@ -89,3 +89,4 @@
     width: 100%;
   }
 }/*# sourceMappingURL=componentsAdd.module.css.map */
+
