added city component

--- a/src/layout/parametrBar/parametrBar.module.css
+++ b/src/layout/parametrBar/parametrBar.module.css
@@ -1,21 +1,19 @@
-@charset "UTF-8";
 .headerSideBar {
   position: fixed;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
-  right: 0px;
+  left: 0px;
   width: 300px;
   padding: 20px;
   height: 100vh;
   top: 0px;
   z-index: 5;
   background: white;
-  transition: transform 0.5s ease; /* Yumuşak geçiş efekti */
-  transform: translateX(0%); /* Başlangıçta gizli */
+  transition: transform 0.5s ease;
+  transform: translateX(0%);
 }
 
-/* Sidebar açıldığında */
 .headerSideBar_active {
-  transform: translateX(0); /* Sidebar tamamen açıldığında */
+  transform: translateX(0);
 }
 
 .headerSideBar_logo {
