--- a/src/components/city/cityAdd/cityAdd.module.css
+++ b/src/components/city/cityAdd/cityAdd.module.css
@@ -1,29 +1,29 @@
-.componentAdd {
+.cityAdd {
   background: white;
   padding: 20px;
   margin-top: 20px;
 }
 
-.componentAdd_title {
+.cityAdd_title {
   font-weight: bold;
   font-size: 25px;
   margin: 40px 0;
 }
 
-.componentAdd_header {
+.cityAdd_header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin-bottom: 20px;
 }
 
-.componentAdd_header_input {
+.cityAdd_header_input {
   width: 60%;
   border-radius: 4px;
   padding: 10px;
 }
 
-.componentAdd_main {
+.cityAdd_main {
   margin: 40px 0;
   padding: 20px 0;
   display: flex;
@@ -31,14 +31,14 @@
   height: 300px;
 }
 
-.componentAdd_main_uploadBox {
+.cityAdd_main_uploadBox {
   position: relative;
   border: 1px dotted blue;
   border-radius: 4px;
   width: 60%;
 }
 
-.componentAdd_main_img {
+.cityAdd_main_img {
   width: 100%;
   height: 100%;
   position: absolute;
@@ -46,20 +46,20 @@
   top: 0;
 }
 
-.componentAdd_main_input {
+.cityAdd_main_input {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
 
-.componentAdd_bottom {
+.cityAdd_bottom {
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.componentAdd_bottom_btn {
+.cityAdd_bottom_btn {
   padding: 20px 60px;
   border: none;
   background: blue;
@@ -69,23 +69,23 @@
 }
 
 @media screen and (max-width: 768px) {
-  .componentAdd_header {
+  .cityAdd_header {
     display: flex;
     flex-direction: column;
     gap: 20px;
   }
-  .componentAdd_header_input {
+  .cityAdd_header_input {
     width: 100%;
   }
-  .componentAdd_main {
+  .cityAdd_main {
     display: flex;
     flex-direction: column;
     margin: 0;
     justify-content: start;
   }
-  .componentAdd_main_uploadBox {
+  .cityAdd_main_uploadBox {
     margin-top: 50px;
     height: 500px;
     width: 100%;
   }
-}/*# sourceMappingURL=componentsAdd.module.css.map */
+}/*# sourceMappingURL=cityAdd.module.css.map */
