--- a/src/components/city/cityComponents/cityComponent.module.css
+++ b/src/components/city/cityComponents/cityComponent.module.css
@@ -36,12 +36,15 @@
   color: blue;
   border: 1px solid blue;
   background: transparent;
+  transition: 500ms;
+
 }
 
 .componentsPage_header_btn:hover {
   background: blue;
   color: white;
-  border: none;
+  border: 1px solid blue;
+
 }
 
 .componentsPage_bottom {
