--- a/src/components/categoryComonents/componentsAdd/componentsAdd.module.scss
+++ b/src/components/categoryComonents/componentsAdd/componentsAdd.module.scss
@@ -9,6 +9,10 @@
     margin:40px 0;
 }
 
+.componentAdd_main_textarea{
+    width: 60%;
+}
+
 .componentAdd_header{
     display: flex;
     justify-content: space-between;
