--- a/src/components/categoryComonents/componentsAdd/componentsAdd.module.css
+++ b/src/components/categoryComonents/componentsAdd/componentsAdd.module.css
@@ -10,6 +10,10 @@
   margin: 40px 0;
 }
 
+.componentAdd_main_textarea {
+  width: 60%;
+}
+
 .componentAdd_header {
   display: flex;
   justify-content: space-between;
