--- a/src/components/maskComponents/mask/mask.module.css
+++ b/src/components/maskComponents/mask/mask.module.css
@@ -1,6 +1,11 @@
 .componentsPage_container {
   background: #F2F7FB;
   height: 100vh;
+  display: flex;
+}
+
+.componentsPage_main {
+  width: 100%;
 }
 
 .componentsPage_title {
@@ -102,6 +107,16 @@
 
 .componentsPage_bottom_main_iconBox_icon:hover {
   color: blue;
+}
+
+.mask_icon {
+  position: absolute;
+  font-size: 20px;
+  z-index: 5;
+  top: 7%;
+  left: 4%;
+  color: white;
+  cursor: pointer;
 }
 
 @media screen and (max-width: 968px) {
