--- a/src/components/city/cityComponents/cityComponent.module.css
+++ b/src/components/city/cityComponents/cityComponent.module.css
@@ -1,6 +1,24 @@
 .componentsPage_container {
   background: #F2F7FB;
-  height: 100vh;
+  display: flex;
+}
+
+.componentsPage_main {
+  width: 100%;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  white-space: nowrap;
+  position: relative;
+}
+
+.componentsAdd_main_icon {
+  position: absolute;
+  font-size: 20px;
+  z-index: 5;
+  top: 7%;
+  left: 4%;
+  color: white;
+  cursor: pointer;
 }
 
 .componentsPage_title {
