--- a/src/components/userComponents/userInfo/userInfo.module.scss
+++ b/src/components/userComponents/userInfo/userInfo.module.scss
@@ -1,7 +1,27 @@
 .componentsPage_container{
     background: #F2F7FB;
     height: 100vh;
+    display: flex;
 }
+
+.componentAdd_main{
+    width: 100%;
+    overflow-y: scroll;
+    overflow-x: hidden; 
+    white-space: nowrap; 
+    position: relative;
+}
+
+.componentAdd_main_icon{
+    position: absolute;
+    font-size: 20px;
+    z-index: 5;
+    top: 7%;
+    left: 4%;
+    color: white;
+    cursor: pointer;
+}
+
 
 .componentsPage_title{
     font-weight: bold;
