--- a/src/layout/parametrBar/parametrBar.module.scss
+++ b/src/layout/parametrBar/parametrBar.module.scss
@@ -1,12 +1,10 @@
 .headerSideBar {
-    position: fixed;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
     left: 0px;
     width: 300px;
     padding: 20px;
     height: 100vh;
     top: 0px;
-    z-index: 5;
     background: white;
     transition: transform 0.5s ease; 
     transform: translateX(0%);
@@ -18,6 +16,7 @@
 .headerSideBar_logo{
     font-size: 25px;
     color: gray;
+    margin-top: 45px;
 }
 
 .headerSideBar_header_icon:hover{
