Prepared some design problems

--- a/src/components/userComponents/usersPage/usersPage.module.scss
+++ b/src/components/userComponents/usersPage/usersPage.module.scss
@@ -21,7 +21,9 @@
     color: white;
     cursor: pointer;
 }
-
+._componentsPage_bottom_main_productTitle_rbi6c_189, ._componentsPage_bottom_header_title_rbi6c_191{
+    width: 20% !important;
+    }
 
 .componentsPage_title{
     font-weight: bold;
