Solved css problems

--- a/src/components/productCompoonent/productCompoonent.module.scss
+++ b/src/components/productCompoonent/productCompoonent.module.scss
@@ -22,7 +22,9 @@
     color: white;
     cursor: pointer;
 }
-
+._componentsPage_bottom_main_btn{
+    right: 2% !important;
+}
 .componentsPage_title{
     font-weight: bold;
     font-size: 25px;
