--- a/src/components/productCompoonent/productCompoonent.module.scss
+++ b/src/components/productCompoonent/productCompoonent.module.scss
@@ -105,6 +105,11 @@
     border-radius: 50%;
 }
 
+.componentsPage_bottom_main_products{
+    position: absolute;
+    left: 35%;
+}
+
 .componentsPage_bottom_main_btn{
     padding: 10px 74px;
     background: red;
@@ -114,7 +119,7 @@
     align-items: center;
     gap: 10px;
     position: absolute;
-    right: 42%;
+    right: 22%;
 }   
 .detailPage_main_head_right_btn_ok{
     padding: 10px 60px;
@@ -125,7 +130,7 @@
     align-items: center;
     gap: 10px;
     position: absolute;
-    right: 42%;
+    right: 22%;
 }
 
 
