--- a/src/components/userComponents/usersPage/usersPage.module.css
+++ b/src/components/userComponents/usersPage/usersPage.module.css
@@ -22,6 +22,10 @@
   cursor: pointer;
 }
 
+._componentsPage_bottom_main_productTitle_rbi6c_189, ._componentsPage_bottom_header_title_rbi6c_191 {
+  width: 20% !important;
+}
+
 .componentsPage_title {
   font-weight: bold;
   font-size: 25px;
