--- a/src/components/productCompoonent/productCompoonent.module.css
+++ b/src/components/productCompoonent/productCompoonent.module.css
@@ -23,6 +23,10 @@
   cursor: pointer;
 }
 
+._componentsPage_bottom_main_btn {
+  right: 2% !important;
+}
+
 .componentsPage_title {
   font-weight: bold;
   font-size: 25px;
@@ -106,6 +110,11 @@
   border-radius: 50%;
 }
 
+.componentsPage_bottom_main_products {
+  position: absolute;
+  left: 35%;
+}
+
 .componentsPage_bottom_main_btn {
   padding: 10px 74px;
   background: red;
@@ -115,7 +124,7 @@
   align-items: center;
   gap: 10px;
   position: absolute;
-  right: 42%;
+  right: 22%;
 }
 
 .detailPage_main_head_right_btn_ok {
@@ -127,7 +136,7 @@
   align-items: center;
   gap: 10px;
   position: absolute;
-  right: 42%;
+  right: 22%;
 }
 
 .componentsPage_bottom_main_iconBox {
