--- a/src/page/productDetail/productDetail.module.css
+++ b/src/page/productDetail/productDetail.module.css
@@ -268,55 +268,4 @@
     height: -moz-max-content;
     height: max-content;
   }
-}
-.detailPage_main_head_right_textarea {
-  width: 100%;
-  height: 100px;
-  padding: 10px;
-  margin-top: 20px;
-  border: 1px solid #ccc;
-  border-radius: 8px;
-  resize: none;
-  font-size: 14px;
-  color: #333;
-  background-color: #f9f9f9;
-  transition: all 0.3s ease;
-}
-
-.detailPage_main_head_right_textarea:focus {
-  border-color: #4CAF50;
-  background-color: #fff;
-  outline: none;
-}
-
-.detailPage_main_head_right_textarea::placeholder {
-  color: #aaa;
-  font-style: italic;
-}
-
-.detailPage_main_head_right_btn_ok, 
-.detailPage_main_head_right_btn_reject {
-  margin-top: 10px;
-  padding: 8px 15px;
-  border-radius: 5px;
-  cursor: pointer;
-  border: none;
-}
-
-.detailPage_main_head_right_btn_ok {
-  background-color: #4CAF50;
-  color: white;
-}
-
-.detailPage_main_head_right_btn_ok:hover {
-  background-color: #45a049;
-}
-
-.detailPage_main_head_right_btn_reject {
-  background-color: #f44336;
-  color: white;
-}
-
-.detailPage_main_head_right_btn_reject:hover {
-  background-color: #e53935;
-}
+}/*# sourceMappingURL=productDetail.module.css.map */
